// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinePalletsScreen Renders Combine Pallet Merge Text if combine pallets has data 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#757575",
        "borderTopWidth": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
        }
      }
    />
  </View>
  <FlatList
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "paddingVertical": 30,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
          [missing "en.PALLET.SCAN_PALLET" translation]
        </Text>
      </View>
    }
    data={
      Array [
        Object {
          "itemCount": 7,
          "palletId": "789",
        },
        Object {
          "itemCount": 4,
          "palletId": "902",
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#757575",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "paddingVertical": 12,
          }
        }
      >
        [missing "en.PALLET.PALLET_MERGE" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 2,
          "borderColor": "#757575",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
        [missing "en.PALLET.PALLET_ID" translation]: 1
      </Text>
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        [missing "en.GENERICS.ITEMS" translation]: 2
      </Text>
    </View>
    <React.Fragment>
      <View
        style={
          Object {
            "alignItems": "center",
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 16,
            }
          }
        >
          [missing "en.PALLET.DELETE_ONCE_MERGED" translation]
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <Memo(Pressable)
            onPress={[Function]}
          >
            <mockConstructor
              color="#000000"
              name="barcode-scan"
              size={100}
            />
          </Memo(Pressable)>
          <View
            style={
              Object {
                "paddingVertical": 10,
              }
            }
          >
            <Text>
              [missing "en.PALLET.SCAN_PALLET" translation]
            </Text>
          </View>
          <View
            style={
              Object {
                "marginBottom": 14,
                "paddingVertical": 10,
              }
            }
          >
            <Text>
              [missing "en.GENERICS.OR" translation]
            </Text>
          </View>
        </View>
      </View>
    </React.Fragment>
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginBottom": 15,
          "width": "90%",
        }
      }
      title="[missing \\"en.GENERICS.SAVE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</View>
`;

exports[`CombinePalletsScreen Tests rendering the CombinePallets Screen Renders Save button as "Disabled" if combine pallets is empty 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flex": 1,
    }
  }
>
  <FlatList
    ListEmptyComponent={
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
            "paddingVertical": 30,
          }
        }
      >
        <mockConstructor
          color="#5FA7F2"
          name="information"
          size={40}
        />
        <Text
          style={
            Object {
              "fontSize": 18,
            }
          }
        >
          [missing "en.PALLET.SCAN_PALLET" translation]
        </Text>
      </View>
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
  />
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
        [missing "en.PALLET.PALLET_ID" translation]: 1
      </Text>
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        [missing "en.GENERICS.ITEMS" translation]: 2
      </Text>
    </View>
    <Button
      backgroundColor="#0071e9"
      disabled={true}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "flexDirection": "row",
          "marginBottom": 15,
          "width": "90%",
        }
      }
      title="[missing \\"en.GENERICS.SAVE\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</View>
`;
